--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -27,7 +27,7 @@
 									<!-- ORARIO INIZO-->
 									<div class="item form-group">
 										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="orario">
-											<span th:text="#{label.orario_inizio}">Orario</span>
+											<span th:text="#{label.orario_inizio}">Orario Fine</span>
 											<span class="required">*</span>
 										</label>
 										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12 input-group" id="razionale">
@@ -42,7 +42,7 @@
 									<!-- ORARIO FINE-->
 									<div class="item form-group">
 										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="orario">
-											<span th:text="#{label.orario_inizio}">Orario</span>
+											<span th:text="#{label.orario_fine}">Orario Fine</span>
 											<span class="required">*</span>
 										</label>
 										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12 input-group" id="razionale">
